[feat] 경력 조건 + 거리순 정렬 구현